--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- mi css -->
     <link rel="stylesheet" href="css/estilo.css">
 
-    <title>Home - Fly Destination</title>
+    <title>Hola cambie el titulo Home - Fly Destination</title>
 </head>
 <body>
 	<div class="container-fluid">
