--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
 <!-- mi css -->
     <link rel="stylesheet" href="../css/estilo.css">
 
-    <title>Contacto - Fly Destination</title>
+    <title>Hola cambie el titulo Contacto - Fly Destination</title>
 </head>
 <body>
 	<div class="container-fluid">
