--- a/pages/flota.html
+++ b/pages/flota.html
@@ -14,7 +14,7 @@
 <!-- mi css -->
     <link rel="stylesheet" href="../css/estilo.css">
 
-    <title>Flota - Fly Destination</title>
+    <title> Hola cambie el titulo Flota - Fly Destination</title>
 </head>
 <body>
     <div class="container-fluid">
