--- a/index.html
+++ b/index.html
@@ -149,134 +149,62 @@
 
 		<div class="col-lg-8 mt-5 mt-lg-0">
 
-		  <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+<form action="forms/contact.php" method="post" role="form" class="php-email-form">
 			<div class="form-row">
-			  <div class="col-md-6 form-group">
-				<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-				<div class="validate"></div>
-			  </div>
-			  <div class="col-md-6 form-group">
-				<input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-				<div class="validate"></div>
-			  </div>
+	<div class="col-md-6 form-group">
+			<input type="text" name="name" class="form-control" id="name" placeholder="Tu Nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+			<div class="validate"></div>
+	</div>
+	<div class="col-md-6 form-group">
+		<input type="email" class="form-control" name="email" id="email" placeholder="Tu Email" data-rule="email" data-msg="Please enter a valid email" />
+			<div class="validate"></div>
+	</div>
 			</div>
 			<div class="form-group">
-			  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-			  <div class="validate"></div>
+	<input type="text" class="form-control" name="subject" id="subject" placeholder="Titulo" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+	<div class="validate"></div>
 			</div>
 			<div class="form-group">
-			  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-			  <div class="validate"></div>
+	<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
+	<div class="validate"></div>
 			</div>
 			<div class="mb-3">
-			  <div class="loading">Loading</div>
-			  <div class="error-message"></div>
-			  <div class="sent-message">Your message has been sent. Thank you!</div>
+	<div class="loading">Loading</div>
+	<div class="error-message"></div>
+	<div class="sent-message">Your message has been sent. Thank you!</div>
 			</div>
-			<div class="text-center"><button type="submit">Send Message</button></div>
-		  </form>
+			<div class="text-center"><button type="submit">Enviar</button></div>
+</form>
 
 		</div>
 
-	  </div>
+	</div>
 
 	</div>
 
     <div class="container d-md-flex py-4">
 
-      <div class="mr-md-auto text-center text-md-left">
+    <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Tempo</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Tempo</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
-      </div>
-      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    </div>
+    <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
     </div>
-  </footer><!-- End Footer -->
-
-<!--	
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105206.91361431133!2d-58.60251321245131!3d-34.51008226419756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca5176e8d535f%3A0x1f3829912ba9bc9a!2sAeropuerto%20Internacional%20de%20San%20Fernando!5e0!3m2!1ses!2sar!4v1618179929576!5m2!1ses!2sar" width="100%" height="400" style="border:0" allowfullscreen="" loading="lazy"></iframe>
-<div class="container">
-	<div class="row">
-		<div class="col-lg-6 col-xs-12">
-			<h4></h4>
-		</div>	
-		<div class="col-lg-6 col-xs-12">
-			<h4></h4>
-		</div>
-</div>
-	<div class="row">
-		<div class="col-lg-6 col-xs-12">
-			<form action="#" target="" method="get" name="formDatosPersonales">
-				<label for="nombre">Nombre</label>
-				<input type="text" name="nombre" id="nombre" placeholder="Nombre"/>
-				<label for="apellidos">Apellidos</label>
-				<input type="text" name="apellidos" id="apellidos" placeholder="Apellido"/>
-				<label for="email" >Email</label>
-				<input type="email" name="email" id="email" placeholder="Email" required />
-				<label for="mensaje">Mensaje</label>
-				<textarea name="mensaje" for="mensaje" placeholder="Mensaje" maxlength="300"></textarea>
-				<input type="submit" name="enviar" value="Enviar"/>
-			</form>	
-		
-	</div>
-		<div class="col-lg-6 col-xs-12">
-			<h3>CONTACTO</h3>
-					<h4 class="h4contacto">Email: FlyDestination@gmail.com</h4>
-					<h4 class="h4contacto">Telefono: 0800-123-456</h4>
-					<h4 class="h4contacto">Aeropuerto Internacional de San Fernando</h4>
-		</div>	
-	</div>
-</div>
-<div class="row rowSinMargin">
-	<div class="col-lg-12 col-xs-12 bg--copy">
-		<p>Powered by: <a href="#">Sebastian Matias Ghio</a></p>
-	</div>
-</div>
-
-	<div class="col-lg-6 col-xs-12">
-			<h2 class="lead">Nuestra oficina</h2>	
-				<h6>Ubicados en el Aeropuerto Josep Tarradellas Barcelona-El Prat, España</h6>
-		</div>		
-		<div class="col-lg-6 col-xs-12">
-			<h2 class="lead">Nuestra oficina</h2>
-				<h6>Ubicados en el Aeropuerto Josep Tarradellas Barcelona-El Prat, España</h6>
-		</div>
-			<footer class="border">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105206.91361431133!2d-58.60251321245131!3d-34.51008226419756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca5176e8d535f%3A0x1f3829912ba9bc9a!2sAeropuerto%20Internacional%20de%20San%20Fernando!5e0!3m2!1ses!2sar!4v1618179929576!5m2!1ses!2sar" width="100%" height="400" style="border:0" allowfullscreen="" loading="lazy"></iframe>
-	<div class="col-lg-6 col-xs-12 modificacionMovile">
-				<form action="#" target="" method="get" name="formDatosPersonales">
-					<label for="nombre">Nombre</label>
-					<input type="text" name="nombre" id="nombre" placeholder="Nombre"/>
-					<label for="apellidos">Apellidos</label>
-					<input type="text" name="apellidos" id="apellidos" placeholder="Apellido"/>
-					<label for="email" >Email</label>
-					<input type="email" name="email" id="email" placeholder="Email" required />
-					<label for="mensaje">Mensaje</label>
-					<textarea name="mensaje" for="mensaje" placeholder="Mensaje" maxlength="300"></textarea>
-					<input type="submit" name="enviar" value="Enviar"/>
-				</form>	
-			</footer>
-	</div>
-		<div class="col-lg-6 col-xs-12 modificacionMovile">
-				<h3>CONTACTO</h3>
-					<h4 class="h4contacto">Email: FlyDestination@gmail.com</h4>
-					<h4 class="h4contacto">Telefono: 0800-123-456</h4>
-					<h4 class="h4contacto">Aeropuerto Internacional de San Fernando</h4>
-		</div>
-		-->
+    </div>
+</footer><!-- End Footer -->
 </div>
 <!-- scripts bootstrap -->
 
