modifique el lenguaje de las pages y el footer

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -41,7 +41,7 @@
 				<a class="nav-link" href="servicios.html">Servicios</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="Flota.html">Flota</a>
+					<a class="nav-link" href="flota.html">Flota</a>
 				</li>
 					<li class="nav-item">
 				<a class="nav-link" href="contacto.html">Contacto</a>
@@ -180,7 +180,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">Sebastian Matias Ghio</a>
         </div>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
